[package]
name = "amudai-position-set"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
amudai-bits = { workspace = true }
amudai-page-alloc = { workspace = true }
amudai-ranges = { workspace = true }
amudai-workflow = { workspace = true }
bytemuck = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
fastrand = { workspace = true }
