[package]
name = "amudai-stopwatch"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]


[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }